
	* data/seahorse.schemas.in: Added listing/progress_update schema
	* seahorse-context: Added ::get_progress_update, uses listing/progress_update
	setting for startup loading progress
	* seahorse-key-store: Use progress update setting for ::populate
	* seahorse-encrypt-sign-file:
	* seahorse-decrypt-verify-file:
	Added
	* seahorse-key-manager: Added support for encrypt & sign and decrypt & verify

2003-02-28  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* src/dialogs/seahorse-export.glade2: Changed Ok to Export
	* src/Makefile.am: changed fr-marshal.list to seahorse-marshal.list

2003-02-28  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Removed status signal, removed ::key_has_secret,
	updated comments
	* seahorse-widget: Does progress bar cleanup when op complete,
	added comments
	* seahorse-key-properties:
	* seahorse-key-manager:
	* seahorse-text-editor:
	Removed focus-in-event
	* seahorse-key-manager:
	* seahorse-key-properties:
	Replaced seahorse_context_key_has_secret with SEAHORSE_IS_KEY_PAIR

2003-02-26  Jacob Perkins  <jap1@users.sourceforge.net>
	
	* seahorse-context: Bug fix in ::key_added

2003-02-25  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-marshal: Added
	* seahorse-context: Added ::show_progress and progress signal
	* seahorse-widget: Removed gpgme_progress_cb in favor of context
	progress signal, removed focus_in_event callback

2003-02-24  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-ops-file: More comments

2003-02-23  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-ops-data:
	* seahorse-ops-file:
	Added ::encrypt_sign, comments

2003-02-21  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Completed key listing changes,
	uses SeahorseKeyPair
	* seahorse-key-pair: Added

2003-02-19  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: key listing happens on demand, not creation,
	added ::get_key_pairs for performance improvements