@@ -492,10 +492,6 @@
 			<title>Text Editor</title>
 			<para>Write me: text-editor</para>
 		</sect2>
-		<sect2 id="file-manager">
-			<title>File Manager</title>
-			<para>Write me: file-manager</para>
-		</sect2>
 		<sect2 id="recipients">
 			<title>Choosing Recipients</title>
 			<para>Write me: recipients</para>
