@@ -8,8 +8,12 @@ src/dialogs/seahorse-add-uid.glade2
 src/dialogs/seahorse-delete.c
 src/dialogs/seahorse-decrypt-file.c
 src/dialogs/seahorse-decrypt-file.glade2
+src/dialogs/seahorse-decrypt-verify-file.c
+src/dialogs/seahorse-decrypt-verify-file.glade2
 src/dialogs/seahorse-encrypt-file.c
 src/dialogs/seahorse-encrypt-file.glade2
+src/dialogs/seahorse-encrypt-sign-file.c
+src/dialogs/seahorse-encrypt-sign-file.glad2
 src/dialogs/seahorse-export.c
 src/dialogs/seahorse-export.glade2
 src/dialogs/seahorse-generate.c
@@ -21,10 +25,10 @@ src/dialogs/seahorse-recipients.c
 src/dialogs/seahorse-recipients.glade2
 src/dialogs/seahorse-revoke.c
 src/dialogs/seahorse-revoke.glade2
-src/dialogs/seahorse-sign.c
-src/dialogs/seahorse-sign.glade2
 src/dialogs/seahorse-sign-file.c
 src/dialogs/seahorse-sign-file.glade2
+src/dialogs/seahorse-sign.c
+src/dialogs/seahorse-sign.glade2
 src/dialogs/seahorse-signatures.c
 src/dialogs/seahorse-signatures.glade2
 src/dialogs/seahorse-verify-file.c
