@@ -35,7 +35,7 @@ ok_clicked (GtkButton *button, SeahorseWidget *swidget)
 	
 	if (!seahorse_ops_file_check_suffix (file, SEAHORSE_CRYPT_FILE)) {
 		seahorse_util_show_error (NULL,
-			_("You must choose an encrypted file ending with .asc or .gpg"));
+			_("You must choose an encrypted file ending in .gpg or .asc"));
 		return;
 	}
 	
@@ -43,6 +43,12 @@ ok_clicked (GtkButton *button, SeahorseWidget *swidget)
 		seahorse_widget_destroy (swidget);
 }
 
+/**
+ * seahorse_decrypt_file_new:
+ * @sctx: #SeahorseContext
+ *
+ * Loads a file dialog for choosing a file to decrypt.
+ **/
 void
 seahorse_decrypt_file_new (SeahorseContext *sctx)
 {
@@ -55,6 +61,16 @@ seahorse_decrypt_file_new (SeahorseContext *sctx)
 		G_CALLBACK (ok_clicked), swidget);
 }
 
+/**
+ * seahorse_decrypt_file:
+ * @sctx: #SeahorseContext:
+ * @file: Filename of file to decrypt. Should have a .gpg or .asc extension
+ *
+ * Tries to decrypt @file using seahorse_ops_file_decrypt(),
+ * then shows a dialog with the decrypted file's location.
+ *
+ * Returns: %TRUE if successful, %FALSE otherwise
+ **/
 gboolean
 seahorse_decrypt_file (SeahorseContext *sctx, const gchar *file)
 {
@@ -68,6 +84,7 @@ seahorse_decrypt_file (SeahorseContext *sctx, const gchar *file)
 		g_signal_connect_swapped (GTK_DIALOG (dialog), "response",
 			G_CALLBACK (gtk_widget_destroy), GTK_WIDGET (dialog));
 		gtk_widget_show (dialog);
+		
 		return TRUE;
 	}
 	else {
