@@ -21,6 +21,7 @@
       <property name="can_default">True</property>
       <property name="can_focus">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
+      <signal name="clicked" handler="closed" last_modification_time="Sat, 01 Mar 2003 20:43:06 GMT"/>
     </widget>
   </child>
 
@@ -29,6 +30,8 @@
       <property name="visible">True</property>
       <property name="can_default">True</property>
       <property name="can_focus">True</property>
+      <property name="label">gtk-ok</property>
+      <property name="use_stock">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
       <signal name="clicked" handler="ok_clicked" last_modification_time="Sat, 01 Mar 2003 17:04:42 GMT"/>
     </widget>
