@@ -1,7 +1,7 @@
 /*
  * Seahorse
  *
- * Copyright (C) 2002 Jacob Perkins
+ * Copyright (C) 2003 Jacob Perkins
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,6 +23,7 @@
 
 #include "seahorse-key-dialogs.h"
 #include "seahorse-ops-key.h"
+#include "seahorse-key-pair.h"
 
 void
 seahorse_delete_new (SeahorseContext *sctx, SeahorseKey *skey, const guint index)
@@ -41,7 +42,7 @@ seahorse_delete_new (SeahorseContext *sctx, SeahorseKey *skey, const guint index
 		message = _("Are you sure you want to permanently delete subkey %s for %s?");
 	
 	warning = gtk_message_dialog_new (NULL, GTK_DIALOG_MODAL,
-		GTK_MESSAGE_WARNING, GTK_BUTTONS_YES_NO, g_strdup_printf (
+		GTK_MESSAGE_QUESTION, GTK_BUTTONS_YES_NO, g_strdup_printf (
 		message, seahorse_key_get_keyid (skey, index),
 		seahorse_key_get_userid (skey, 0)));
 	
@@ -50,6 +51,17 @@ seahorse_delete_new (SeahorseContext *sctx, SeahorseKey *skey, const guint index
 	
 	if (response != GTK_RESPONSE_YES)
 		return;
+	/* make sure if pair */
+	else if (SEAHORSE_IS_KEY_PAIR (skey)) {
+		warning = gtk_message_dialog_new (NULL, GTK_DIALOG_MODAL,
+			GTK_MESSAGE_WARNING, GTK_BUTTONS_YES_NO,
+			_("This key has a secret key! Do you really want to delete it?"));
+		response = gtk_dialog_run (GTK_DIALOG (warning));
+		gtk_widget_destroy (warning);
+		
+		if (response != GTK_RESPONSE_YES)
+			return;
+	}
 	
 	if (index == 0)
 		seahorse_ops_key_delete (sctx, skey);
