@@ -30,6 +30,8 @@
       <property name="visible">True</property>
       <property name="can_default">True</property>
       <property name="can_focus">True</property>
+      <property name="label">gtk-ok</property>
+      <property name="use_stock">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
       <signal name="clicked" handler="ok_clicked" last_modification_time="Wed, 19 Feb 2003 03:15:22 GMT"/>
     </widget>
