@@ -10,6 +10,7 @@ seahorse 0.7.1
 	* Key pairs initially listed first
 	* Performance improvements with large key rings, especially in loading preferences
 	* Progress display at startup for listing of keys
+	* Can delete subkeys of non key-pairs
 
 seahorse 0.7.0
 --------------
