@@ -1,3 +1,7 @@
+2003-03-01  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* POTFILES.in: Added new file dialogs
+
 2003-02-17  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* POTFILES.in: Removed seahorse-add-revoker, seahorse-file-manager.
