@@ -8,6 +8,16 @@
 	* seahorse-decrypt-verify-file:
 	Added
 	* seahorse-key-manager: Added support for encrypt & sign and decrypt & verify
+	* seahorse-key-properties: Disable Add Revoker if not a pair,
+	allow deletion on non-pair subkeys
+	* seahorse-ops-key: Updated ::del_subkey to delete non-pair subkeys
+	* seahorse-delete: Added extra dialog for deleting a key-pair
+	* seahorse-widget: Don't insensitize widget for final progress call
+	* seahorse-encrypt-file:
+	* seahorse-sign-file:
+	* seahorse-decrypt-file:
+	* seahorse-verify-file:
+	Added comments, made strings consistent
 
 2003-02-28  Gregory Leblanc  <gleblanc@linuxweasel.com>
 
